<resources>
    <string name="app_name">万贯金融</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="huoqi_buy">加入</string>
    <string name="huoqi_sell">赎回</string>
    <string name="huoqi_title_jieshao">活期介绍</string>
    <string name="huoqi_title_chakan">查看</string>
    <string name="huoqi_title_lilv">年化利率</string>
    <string name="huoqi_title_shouyi">万份收益</string>
    <string name="huoqi_title_tese_a">随存随取</string>
    <string name="huoqi_title_tese_b">100元起投</string>
    <string name="huoqi_title_tese_c">本息保险</string>
    <string name="huoqi_title_jiaru_a">今日加入</string>
    <string name="huoqi_title_jiaru_b">明日计息</string>
    <string name="huoqi_title_jiaru_c">后天到账</string>
    <string name="borrow_name">客户姓名</string>
    <string name="borrow_idcard">身份证号</string>
    <string name="borrow_marrystate">婚姻状况</string>
    <string name="borrow_phone">联系电话</string>
    <string name="borrow_hometown">户籍地址</string>
    <string name="borrow_address">现居住地</string>
    <string name="borrow_money">申请金额(万元)</string>
    <string name="borrow_house_address">抵押物所在地</string>
    <string name="borrow_house_type">抵押物产权类型</string>
    <string name="borrow_days">贷款期限</string>
    <string name="borrow_hascar">是否有车</string>
    <string name="borrow_hashouse">是否有房</string>
    <string name="borrow_houseaddress">房产地址</string>
    <string name="borrow_haspolicy">有无保单</string>
    <string name="borrow_wage">月均工资</string>
    <string name="huoqi_buy_total">可投金额</string>
    <string name="huoqi_buy_myleft">可用余额</string>
    <string name="huoqi_buy_money">加入金额</string>
    <string name="huoqi_buy_money_hint">100元起，100倍数递增</string>
    <string name="huoqi_buy_money_yuan">元</string>
    <string name="huoqi_buy_xieyi">点击加入即代表同意并签署《万贯活期投资协议》</string>
    <string name="huoqi_buy_jixiguize_title">*计息规则</string>
    <string name="huoqi_buy_jixiguize_detail">工作日24:00前加入，加入后第一个工作日开始计息，次日显示收益。\n节假日加入，加入后第二个工作日开始计息，次日显示收益</string>
    <string name="huoqi_redeem_title">赎回金额至您的可用余额</string>
    <string name="huoqi_redeem_money">赎回金额</string>
    <string name="huoqi_redeem_money_hint">最多可赎回0.00元</string>
    <string name="dingqi_buy_name">产品名称</string>
    <string name="dingqi_buy_moneyrate">年化利率</string>
    <string name="dingqi_buy_days">投资期限</string>
    <string name="dingqi_buy_sellway">还款方式</string>
    <string name="dingqi_buy_needmoney">可投金额</string>
    <string name="dingqi_buy_moneymin">起投金额</string>
    <string name="dingqi_buy_moneyleft">最大加入金额:</string>
    <string name="dingqi_buy_money">金额\t\t</string>
    <string name="dingqi_buy_money_hint">请输入投资金额</string>
    <string name="dingqi_buy_money_yuan">元</string>
    <string name="dingqi_buy_myleft">可用余额</string>
    <string name="dingqi_buy_myearn">到期收益</string>
    <string name="dingqi_buy">购买</string>
    <string name="header_login">登陆/注册\n\n登陆后享更多优惠</string>
    <string name="item_my_bought">我的投资</string>
    <string name="item_my_buy">活期</string>
    <string name="item_my_card">银行卡</string>
    <string name="item_my_huoqi">万贯活期</string>
    <string name="item_my_invite">邀请好友</string>
    <string name="item_my_phone">客服电话</string>
    <string name="item_my_redeem">赎回</string>
    <string name="item_my_trade">我的交易</string>
    <string name="item_my_money_log">账户日志</string>
    <string name="item_my_zhuanrang">转让专区</string>
    <string name="zhuanrang_sell_money">转让金额</string>
    <string name="zhuanrang_sell_money_hint">请输入转让价格</string>
    <string name="zhuanrang_sell">转让</string>
    <string name="item_my_deposit">充值</string>
    <string name="item_my_"></string>
    <string name="my_title_keyongyue">可用余额(元)</string>
    <string name="my_title_dongjiejine">冻结金额(元)</string>
    <string name="login">登陆</string>
    <string name="logout">退出登录</string>
    <string name="reset_login">重置登录密码</string>
    <string name="reset_pay">重置支付密码</string>
    <string name="register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="personal_info">个人信息</string>
    <string name="phonenumber">手机号/昵称/Email</string>
    <string name="password">密码</string>
    <string name="register_title_sms">获取验证码</string>
    <string name="register_phone">手机号</string>
    <string name="register_code">手机验证码</string>
    <string name="register_password">密码</string>
    <string name="register_password_again">请再输一次密码</string>
    <string name="register_pay_password">支付密码</string>
    <string name="register_pay_password_again">请再输一次支付密码</string>
    <string name="register_inviter">邀请人(选填)</string>
    <string name="forget_password">忘记密码</string>
    <string name="change_password">输入新密码</string>
    <string name="change_password_again">请再次输入新密码</string>
    <string name="rp_title">修改登录密码</string>
    <string name="rp_old_password">输入原密码</string>
    <string name="next_step">下一步</string>
    <string name="commit">提交</string>
    <string name="abc_title">添加银行卡</string>
    <string name="abc_choose_bank">请选择开户行</string>
    <string name="abc_bankcard_no">请输入银行卡号</string>
    <string name="abc_realname">请输入您的姓名</string>
    <string name="abc_cardid">请输入您的身份证号</string>
    <string name="abc_phone">银行预留手机号</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="fd_deposit">请输入充值金额(元)</string>
</resources>
