<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".main.home.HomeFragment">

    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar_borrow"/>
    <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_name"
                    android:hint="@string/borrow_name"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_idcard"
                    android:hint="@string/borrow_idcard"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_marrystate"
                    android:hint="@string/borrow_marrystate"
                    android:editable="false"
                    android:focusable="false"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/xingming"
                    android:hint="@string/borrow_phone"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_hometown"
                    android:hint="@string/borrow_hometown"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_address"
                    android:hint="@string/borrow_address"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_money"
                    android:hint="@string/borrow_money"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_days"
                    android:hint="@string/borrow_days"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_hascar"
                    android:hint="@string/borrow_hascar"
                    android:editable="false"
                    android:focusable="false"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_hashouse"
                    android:hint="@string/borrow_hashouse"
                    android:editable="false"
                    android:focusable="false"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_houseaddress"
                    android:hint="@string/borrow_houseaddress"
                    android:visibility="gone"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"  />
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_haspolicy"
                    android:hint="@string/borrow_haspolicy"
                    android:editable="false"
                    android:focusable="false"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_borrow_wage"
                    android:hint="@string/borrow_wage"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"  />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

