<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar_add_bank_card"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_abc_choose_bank"
                    android:hint="@string/abc_choose_bank"
                    android:editable="false"
                    android:focusable="false"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"
                    android:drawableRight="@drawable/iv_account_tip_right"
                    android:drawablePadding="@dimen/activity_vertical_margin"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_abc_bankcard_no"
                    android:hint="@string/abc_bankcard_no"
                    android:inputType="number"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_abc_realname"
                    android:hint="@string/abc_realname"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_abc_cardid"
                    android:hint="@string/abc_cardid"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                <com.rengwuxian.materialedittext.MaterialEditText
                        style="@style/one_line_material"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_abc_phone"
                        android:hint="@string/abc_phone"
                        android:inputType="phone"
                        app:met_baseColor="@color/material_base_color"
                        app:met_primaryColor="@color/material_primary_color"
                        app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                        app:met_floatingLabel="highlight"
                        app:met_singleLineEllipsis="true"  />

                <Button
                        android:id="@+id/btn_abc_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_title_sms"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginTop="@dimen/size_4"
                        android:layout_marginBottom="@dimen/size_4"
                        android:textColor="#fff"
                        android:layout_marginRight="16dp"
                        android:background="@color/material_primary_green"/>

            </LinearLayout>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_abc_code"
                    android:hint="@string/register_code"
                    android:inputType="phone"
                    android:visibility="gone"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
        </LinearLayout>

    </ScrollView>

</LinearLayout>

