<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar"
             android:id="@+id/tb_huoqi_buy"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/recy"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@android:color/background_light"
                    android:padding="@dimen/activity_horizontal_margin"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huoqi_buy_total"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
                <TextView
                        android:id="@+id/tv_huoqi_buy_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@android:color/background_light"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="3dp"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huoqi_buy_myleft"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
                <TextView
                        android:id="@+id/tv_huoqi_buy_myleft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@android:color/background_light"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:padding="@dimen/activity_horizontal_margin"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huoqi_buy_money"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_14"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/huoqi_buy_money_hint"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_14"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:inputType="number"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huoqi_buy_money_yuan"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_14"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huoqi_buy_xieyi"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

            <Button
                    android:id="@+id/btn_huoqi_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/huoqi_buy"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_18"
                    android:background="@android:color/holo_red_dark"
                    android:layout_marginLeft="@dimen/list_padding"
                    android:layout_marginRight="@dimen/list_padding"
                    android:paddingTop="@dimen/list_padding"
                    android:paddingBottom="@dimen/list_padding"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huoqi_buy_jixiguize_title"
                    android:textColor="@color/material_primary_color"
                    android:textSize="@dimen/text_size_14"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_primary_color"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huoqi_buy_jixiguize_detail"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_14"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        </LinearLayout>

    </ScrollView>

</LinearLayout>