<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar_forget"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                <com.rengwuxian.materialedittext.MaterialEditText
                        style="@style/one_line_material"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_register_phone"
                        android:hint="@string/register_phone"
                        android:inputType="phone"
                        app:met_baseColor="@color/material_base_color"
                        app:met_primaryColor="@color/material_primary_color"
                        app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                        app:met_floatingLabel="highlight"
                        app:met_singleLineEllipsis="true"  />

                <Button
                        android:id="@+id/btn_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_title_sms"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginTop="@dimen/size_4"
                        android:layout_marginBottom="@dimen/size_4"
                        android:textColor="#fff"
                        android:layout_marginRight="16dp"
                        android:background="@color/material_primary_green"/>

            </LinearLayout>
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_register_code"
                    android:hint="@string/register_code"
                    android:inputType="phone"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_register_password"
                    android:hint="@string/change_password"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"  />
            <com.rengwuxian.materialedittext.MaterialEditText
                    style="@style/one_line_material"
                    android:id="@+id/et_register_password_again"
                    android:hint="@string/change_password_again"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/material_base_color"
                    app:met_primaryColor="@color/material_primary_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize ="@dimen/material_label_textsize"
                    app:met_singleLineEllipsis="true"/>

            <Button
                    android:id="@+id/btn_commit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/material_primary_color"
                    android:text="@string/commit"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>

